--- a/test/apps/OSB_GUPs/README
+++ b/test/apps/OSB_GUPs/README
@@ -27,13 +27,13 @@ Modifications copyright (C) 2021 Advanced Micro Devices, Inc. All rights reserve
 	4.2	Follow instructions in https://github.com/OpenFAM/OpenFAM to install the OpenFAM.
 
 5.	How to run
-	5.1	Copy GUPs files to the following directory: ../OpenFAM/test/apps/
-	5.2	Go to ../OpenFAM/build/test/apps/GUPS to build it via "make clean", "make"
-	5.3	Run the memory server: "../OpenFAM/build/src/memoryserver -m 127.0.0.1 &"
-	5.4	Initialize the memory region: "../OpenFAM/third-party/build/bin/mpirun -np 1 ./fam_GUPS 0 2 0"
-	5.5	Run: "../OpenFAM/third-party/build/bin/mpirun -np 2 ./fam_GUPS 1 2 0"
-	    where ../OpenFAM/third-party/build/bin/mpirun -np  arg_0 ./fam_GUPS arg_1 arg_2 arg_3
-		5.6.1	arg_0: #PEs (Must be 1 for the memory region initialization)
-		5.6.2	arg_1: #PEs
-		5.6.3	arg_2: Initialize or run (0: Initialize the memory region; 1: Run mode)
-		5.6.4	arg_3: Operation Mode (0: LoadStore vs. 1: PutGet)
+	5.1	Copy OSB_GUPs files to the following directory: ../OpenFAM-master/test/apps/
+	5.2	Go to ../OpenFAM-master/build/test/apps/OSB_GUPs to build it via "make clean", "make"
+	5.3	Run the OpenFAM servers: "source ../OpenFAM-master/build/setup.sh --memserver=127.0.0.1 --metaserver=127.0.0.1 --cisserver=127.0.0.1"
+	5.4	Load data to FAM: "../OpenFAM-master/third-party/build/bin/mpirun -np 1 ./fam_GUPS 0 2 0"
+	5.5	Run: "../OpenFAM-master/third-party/build/bin/mpirun -np 2 ./fam_GUPS 1 2 0"
+	    where ../OpenFAM-master/third-party/build/bin/mpirun -np  arg_0 ./fam_GUPS arg_1 arg_2 arg_3
+		5.6.1	arg_0: #PEs (Must be 1 for the memory region initialization).
+		5.6.2	arg_1: Initialize or run (0: Initialize the memory region; 1: Run mode).
+		5.6.3	arg_2: #PEs in the Run mode (supply the same for the initialization mode).
+		5.6.4	arg_3: Operation Mode (0: LoadStore vs. 1: PutGet).
